--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-vis-updated",
-  "version": "1.11.8",
+  "version": "1.11.10",
   "license": "MIT",
   "author": "Dustin Kane <dustinpkane@gmail.com>",
   "description": "Data visualization library based on React and d3.",
@@ -59,14 +59,30 @@
     "react-motion": "^0.5.2"
   },
   "devDependencies": {
-    "babel-cli": "6.18.0",
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-module-resolver": "^2.4.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "canvas-prebuilt": "^1.6.11",
@@ -105,6 +121,15 @@
     "babel"
   ],
   "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "modules": false
+        }
+      ],
+      "@babel/preset-react"
+    ],
     "plugins": [
       [
         "module-resolver",
@@ -113,36 +138,34 @@
             "./src"
           ]
         }
-      ]
-    ],
-    "env": {
-      "production": {
-        "presets": [
-          "es2015",
-          "stage-0",
-          "react"
-        ]
-      },
-      "development": {
-        "presets": [
-          "es2015",
-          "stage-0",
-          "react"
-        ]
-      },
-      "es": {
-        "presets": [
-          [
-            "es2015",
-            {
-              "modules": false
-            }
-          ],
-          "stage-0",
-          "react"
-        ]
-      }
-    }
+      ],
+      "@babel/plugin-syntax-dynamic-import",
+      "@babel/plugin-syntax-import-meta",
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-json-strings",
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
+      "@babel/plugin-proposal-function-sent",
+      "@babel/plugin-proposal-export-namespace-from",
+      "@babel/plugin-proposal-numeric-separator",
+      "@babel/plugin-proposal-throw-expressions",
+      "@babel/plugin-proposal-export-default-from",
+      "@babel/plugin-proposal-logical-assignment-operators",
+      "@babel/plugin-proposal-optional-chaining",
+      [
+        "@babel/plugin-proposal-pipeline-operator",
+        {
+          "proposal": "minimal"
+        }
+      ],
+      "@babel/plugin-proposal-nullish-coalescing-operator",
+      "@babel/plugin-proposal-do-expressions",
+      "@babel/plugin-proposal-function-bind"
+    ]
   },
   "nyc": {
     "exclude": [
